# Udacity_MPC

./: .gitignore  CMakeLists.txt  main.py  pyproject.toml
examples/: main.py  start_with_udp.py
mpc/: __init__.py  _mpc.pyi  mpc.pyi
scripts/bat/: bulid_project.bat  install_cppad.bat  install_ipopt.bat  install_pybind11.bat
src/: MPC.cpp  MPC.h  MPCPolicy.cpp  MPCPolicy.h  bind.cpp  helpers.h
src/binding/: bind.cpp
